--- a/client/src/pages/register/register.scss
+++ b/client/src/pages/register/register.scss
@@ -6,12 +6,12 @@
   justify-content: center;
 
   .card {
-    width: 50%;
+    width: 60%;
     display: flex;
     flex-direction: row-reverse;
     background-color: white;
     border-radius: 10px;
-    min-height: 600px;
+    height: 500px;
     overflow: hidden;
 
     .left {
@@ -29,9 +29,6 @@
       h1 {
         font-size: 100px;
         line-height: 100px;
-      }
-      
-      p {
       }
 
       span {
