--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -41,12 +41,19 @@ $themes: (
 }
 
 @mixin mobile {
-  @media (max-width: 480px) {
+  @media (max-width: 560px) {
     @content;
   }
 }
+
 @mixin tablet {
-  @media (max-width: 960px) {
+  @media (max-width: 980px) {
+    @content;
+  }
+}
+
+@mixin laptop {
+  @media (max-width: 1290px) {
     @content;
   }
 }
