--- a/client/src/components/leftBar/leftBar.scss
+++ b/client/src/components/leftBar/leftBar.scss
@@ -41,6 +41,12 @@
           display: flex;
           align-items: center;
           gap: 10px;
+          cursor: pointer;
+
+          .icon {
+            display: flex;
+            align-items: center;
+          }
 
           img {
             width: 30px;
